# babble

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  POPL23.md  README.md
.github/workflows/: ci.yml
babble-macros/: Cargo.toml
babble-macros/src/: lib.rs  parse.rs
benches/: babble_bench.rs
data/benchmark-dsrs/: drawings.rewrites  list.rewrites  physics.rewrites
data/cogsci/: dials.bab  furniture.bab  wheels.bab
data/dc2/: .gitignore
data/dc2/list_list_hard_test_ellisk_2019-02-15T11.26.41/: bench000_it0.json  bench001_it1.json  bench002_it2.json  bench003_it4.json  bench004_it5.json  bench005_it7.json  (+5 more)
examples/: anti_unif_1.bab  anti_unif_2.bab  anti_unif_3.bab  anti_unif_4.bab  anti_unif_5.bab  anti_unif_6.bab  dreamcoder-debugging.json  dreamcoder-list-tasks.json  filter-apply-right.bab  filter-embedded.bab  filter-list-2.bab  filter-list.bab  filter.bab  hello.bab  lib-lifting.bab  list-hello.bab  list-hof.bab  list-iterations.bab  max-compose.bab  nested-functions.bab  smiley_demo.bab  test.bab  test_binder.bab
examples/cogsci/: test.bab  train.bab
examples/paper/: hexagons.bab  kth_last.bab  kth_last_alt.bab  map_inc.bab  polygons-orig.bab  polygons.bab  polygons.rewrites  take_n.json
examples/psych/: base.bab  dsr.bab  subterm.bab
harness/: Pipfile  main.py  plot-compression.py  plot-costs.py
harness/data_gen/: dc_res.csv  list-beam-400-lps-1-rounds-20.csv  physics-beam-400-lps-1-rounds-20.csv  res_compression.csv  res_drawing.csv  sweep_drawing_2022-06-29T10:45:38.687584.csv
harness/scripts/: cleanup-cogsci.py  cogsci-table.py  generalization.py  param_sweep.py  plot-compression.py  plot-costs.py  plot-dsr-impact.py  plot-lines.py  plot.py
plot/: Pipfile  plot-compression.py  plot-costs.py  plot-dsr-impact.py
src/: anti_unify.rs  antiunifiable.rs  antiunification.rs  ast_node.rs  co_occurrence.rs  dfta.rs  dreamcoder.rs  env_pattern.rs  eval.rs  experiments.rs  expr.rs  extract.rs  free_vars.rs  fresh.rs  learn.rs  lib.rs  lift_lib.rs  list_lang.rs  macros.rs  main.rs  my_lang.rs  rewrites.rs  runner.rs  sexp.rs  simple_lang.rs  smiley_lang.rs  teachable.rs  util.rs
src/ast_node/: expr.rs  partial_expr.rs  pretty.rs
src/dreamcoder/: expr.rs  json.rs  mod.rs  parse.rs  types.rs  util.rs
src/experiments/: beam_experiment.rs  cache.rs  eqsat.rs  eqsat_experiment.rs  ilp_experiment.rs
src/extract/: beam.rs  ilp.rs  mod.rs  partial.rs
src/rewrites/: anti_unify.rs  intro.rs  mod.rs  rotate.rs
(+185 files in other folders)
