[package]
name = "babble"
description = "improved library learning"
version = "0.1.0"
authors = ["David Cao <david@cao.sh>", "Rose Kunkel <rose@rosekunkel.me>"]
repository = "https://github.com/dcao/babble"
license = "MIT"
keywords = ["e-graphs", "program-synthesis"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
egg = { git = "https://github.com/egraphs-good/egg", rev = "b4257e8" }
env_logger = "0.9"
