[workspace]
members = [".", "babble-macros"]
default-members = [".", "babble-macros"]

[package]
name = "babble"
description = "improved library learning"
version = "0.1.0"
authors = ["David Cao <david@cao.sh>", "Rose Kunkel <rose@rosekunkel.me>"]
repository = "https://github.com/dcao/babble"
license = "MIT"
keywords = ["e-graphs", "program-synthesis"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
babble-macros = { path = "babble-macros" }
egg = { git = "https://github.com/egraphs-good/egg", branch = "lp" }
grb = "1.3.0"
clap = "3.0.0-beta.4"
itertools = "0.10"
ordered-float = "2"
env_logger = "0.9"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nom = "7"
thiserror = "1"
internment = { version = "0.5", features = ["arc"] }
xml-rs = "0.8"
log = "0.4"
ref-cast = "1"

[profile.release]
debug = true
