[workspace]
members = [".", "babble-macros"]
default-members = [".", "babble-macros"]

[package]
name = "babble"
description = "improved library learning"
version = "0.1.0"
authors = ["David Cao <david@cao.sh>", "Rose Kunkel <rose@rosekunkel.me>"]
repository = "https://github.com/dcao/babble"
license = "MIT"
keywords = ["e-graphs", "program-synthesis"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
babble-macros = { path = "babble-macros" }
egg = { git = "https://github.com/dcao/egg", features = ["serde-1"] }
csv = "1"
grb = { version = "1.3.0", optional = true }
clap = { version = "3.2.8", features = ["derive"] }
itertools = "0.10"
indexmap = "1.7"
ordered-float = "2"
env_logger = "0.9"
lazy_static = "1.4"
rayon = "1.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1.8"
nom = "7"
thiserror = "1"
xml-rs = "0.8"
log = "0.4"
ref-cast = "1"
ron = "0.7"
anyhow = "1"
time = { version = "0.3", features = ["formatting"] }
nalgebra = "0.32.2"

[profile.release]
debug = true
